# petri_dish

./: Cargo.toml  README.md
.cargo/: config.toml
libs/macro_tools_pd/: Cargo.toml  README.md
libs/macro_tools_pd/src/: lib.rs
src/: cell.rs  environment.rs  genome.rs  graphics.rs  grid.rs  lib.rs  main.rs  render.rs  world.rs
src/position/: direction.rs  mod.rs
