[package]
name = "petri_dish"
description = "The small model of unicellular evolution."
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
rust-version = "1.60"
homepage = ""
repository = ""
publish = false

[dependencies]
ocl = "0.19"
gl = "0.14.0"
glfw = "0.52.0"
libc = "0.2.147"
rand = "0.8.5" 