[package]
name = "petri_dish"
description = "The small model of unicellular evolution."
authors = ["Dmitriy Mayorov<MayorDi@yandex.ru>"]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
readme = "./README.md"
rust-version = "1.60"
homepage = "https://github.com/MayorDi/petri_dish"
repository = "https://github.com/MayorDi/petri_dish"
publish = false

[dependencies]
gl = "0.14.0"
glfw = "0.53.0"
rand = "0.8.5" 
derive-new = "0.5.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true